--- a/2_yolov4/a_csp_darknet53.ipynb
+++ b/2_yolov4/a_csp_darknet53.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "organic-blackberry",
+   "id": "6397c526",
    "metadata": {},
    "outputs": [
     {
@@ -20,17 +20,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "amateur-arnold",
-   "metadata": {},
-   "source": [
-    "定义CSPdarknet53基本骨架网络"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "gross-roman",
+   "id": "22b0c32d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,12 +38,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stone-august",
+   "id": "c3a54ead",
    "metadata": {},
    "source": [
     "网络架构图：\n",
     "\n",
-    "<img src=\"https://pic3.zhimg.com/80/v2-139a50003c09efe54b2db906710f6252_1440w.jpg\" alt=\"img\" style=\"zoom:50%;\" />\n",
+    "<img src=\"https://pic3.zhimg.com/80/v2-139a50003c09efe54b2db906710f6252_1440w.jpg\" alt=\"img\" style=\"zoom:30%;\" />\n",
     "\n",
     "基本组件：\n",
     "1. **CBM：**Yolov4网络结构中的最小组件，由Conv+Bn+Mish激活函数三者组成。\n",
@@ -62,17 +54,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stupid-turkish",
+   "id": "0c3892ad",
    "metadata": {},
    "source": [
-    "### 定义 csp_resblock_body\n",
+    "## 1、定义 csp_resblock_body\n",
     "CSP 基本结构见上图"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "first-apache",
+   "id": "00bacfc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,16 +95,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "involved-watts",
+   "id": "c89d3094",
    "metadata": {},
    "source": [
-    "### 定义 csp_darknet53_body"
+    "## 2、定义 csp_darknet53_body"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "excited-sweden",
+   "execution_count": 3,
+   "id": "1624e331",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
