--- a/2_yolov4/b_yolov4_neck_and_body.ipynb
+++ b/2_yolov4/b_yolov4_neck_and_body.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eecf0939",
+   "id": "6574e4e1",
    "metadata": {},
    "outputs": [
     {
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "178f9991",
+   "execution_count": 2,
+   "id": "aa1c1515",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,21 +42,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "025878f0",
+   "id": "8339c4ee",
    "metadata": {},
    "source": [
-    "### 定义 yolo neck\n",
-    "<img src=\"https://pic3.zhimg.com/80/v2-5251e9c0784871a37c693d53f7d57f92_1440w.jpg\" alt=\"img\" style=\"zoom:50%;\" />"
+    "## 1、定义 yolo neck\n",
+    "<img src=\"https://pic3.zhimg.com/80/v2-5251e9c0784871a37c693d53f7d57f92_1440w.jpg\" alt=\"img\" style=\"zoom:30%;\" />"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "84839472",
+   "execution_count": 3,
+   "id": "8d6b6b99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def yolov4_neck(feature_maps, feature_channel_nums):\n",
+    "def yolov4_neck(feature_maps, feature_channel_nums, num_anchors, num_classes):\n",
     "    \"\"\"\n",
     "    \"\"\"\n",
     "    f1, f2, f3 = feature_maps # (f1:19x19|f2:38*38|f3:76*76 for input input)\n",
@@ -120,12 +120,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "252db21b",
+   "metadata": {},
+   "source": [
+    "## 3、定义 yolo4_body"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "17c04dd8",
+   "execution_count": 4,
+   "id": "f5763929",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def yolo4_body(inputs, num_anchors, num_classes, weights_path=None):\n",
+    "    \"\"\"Create YOLOv4 model CNN body in keras\"\"\"\n",
+    "    darknet = Model(inputs, csp_resblock_body(inputs))\n",
+    "    print('backbone layers number: {}'.format(len(darknet.layers)))\n",
+    "    if weights_path is not None:\n",
+    "        darknet.load_weights(weights_path, by_name=True)\n",
+    "        print('Load weights {} .'.format(weights_path))\n",
+    "        \n",
+    "    f1 = darknet.output\n",
+    "    f2 = darknet.layers[204].output\n",
+    "    f3 = darknet.layers[131].output\n",
+    "    \n",
+    "    y1, y2, y3 = yolov4_neck((f1, f2, f3), (1024, 512, 256), num_anchors, num_classes)\n",
+    "    \n",
+    "    return Model(inputs, [y1, y2, y3])"
+   ]
   }
  ],
  "metadata": {
