--- a/2_yolov4/c_yolov4_head_keras.ipynb
+++ b/2_yolov4/c_yolov4_head_keras.ipynb
@@ -2,20 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "892855a0",
+   "execution_count": 1,
+   "id": "9b460a1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing Jupyter notebook from a_csp_darknet53.ipynb\n",
+      "importing Jupyter notebook from z_layers.ipynb\n",
+      "importing Jupyter notebook from b_yolov4_neck_and_body.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "import Ipynb_importer\n",
     "from a_csp_darknet53  import *\n",
-    "from b_yolov4_neck import *"
+    "from b_yolov4_neck_and_body import *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "059e3c25",
+   "id": "ad3666de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b29bca2a",
+   "id": "9ca38c12",
    "metadata": {},
    "source": [
     "## 1、解码\n",
@@ -89,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad6ed3ad",
+   "id": "09ef7bfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,8 +123,8 @@
     "    feats = K.reshape(feats, [-1, grid_shape[0], grid_shape[1], num_anchors, num_classes + 5])\n",
     "\n",
     "    # Adjust preditions to each spatial grid point and anchor size.\n",
-    "    # box_xy 数值范围调整为【0-1】，1为grid_shape高或宽的长度\n",
-    "    #box_wh 数值范围调整为 【0-1】，1为input_shape大小，输入尺寸是使用backbone的最小特征图尺寸*stride得到的\n",
+    "    # box_xy 数值范围调整为【0-1】(归一化)\n",
+    "    #box_wh 数值范围调整为 【0-1】(归一化)，输入尺寸是使用backbone的最小特征图尺寸*stride得到的\n",
     "    # 强调说明一下：这里 box_xy 是相对于grid 的位置（说成input似乎也行）；box_wh是相对于 input_shape大小\n",
     "    # scale_x_y是一个 trick，见下文链接\n",
     "    if scale_x_y:\n",
@@ -144,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "062a1fb4",
+   "id": "82dcde93",
    "metadata": {},
    "source": [
     "## 2、计算 boxes 真实宽高和位置\n",
@@ -165,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8973e58",
+   "id": "3474a8e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42e90909",
+   "id": "bbf3aa94",
    "metadata": {},
    "source": [
     "## 3、outputs处理函数\n",
@@ -223,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae9d4521",
+   "id": "0df1f01d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ad960d",
+   "id": "a420153b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -256,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "00a1cc57",
+   "id": "ebf7ecf0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -264,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d1fe3bd",
+   "id": "4864ead4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -272,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "816fc8ab",
+   "id": "683d7008",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -280,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a432813c",
+   "id": "a0789f27",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -288,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1df9f02a",
+   "id": "ae8fae04",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -296,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "658b45b9",
+   "id": "1440a7b7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -304,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1deacb58",
+   "id": "b1b3a206",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -312,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "08c7dbb6",
+   "id": "3cff5451",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3d50140",
+   "id": "057e25dc",
    "metadata": {},
    "outputs": [],
    "source": []
