--- a/nodes/20210405_目标检测-YOLO系列.md
+++ b/nodes/20210405_目标检测-YOLO系列.md
@@ -976,3 +976,155 @@ YOLOv3中，预测框中心点坐标的计算方法是 ![[公式]](https://www.z
 
 更详细的讨论请参考[#3293](https://link.zhihu.com/?target=https%3A//github.com/AlexeyAB/darknet/issues/3293)
 
+## 8.5 Label smoothing 平滑
+
+> https://www.codenong.com/cs106919907/
+>
+> https://zhuanlan.zhihu.com/p/116466239
+>
+> https://www.jianshu.com/p/6a5ea4ddbf32
+>
+> https://blog.csdn.net/sinat_36618660/article/details/100166957
+
+
+
+## 8.6 正负样本分配
+
+> https://jishuin.proginn.com/p/763bfbd3314f
+
+该部分做的是确定正负样本，是在 anchor维度上。也就是确定所有的 anchor 哪些是正样本，哪些是负样本。
+
+划分为正样本的 anchor 意味着负责 gt box 的预测，训练的时候就会计算 gt box 的loss。而负样本表明该 anchor 没有负责任何物体，当然也需要计算 loss，但是只计算 confidence loss，因为没有目标，所以无法计算 box loss 和类别 loss。
+
+Yolo 还有一个设置就是忽略样本，也就是 被划分为负样本anchor 和 gt box有较大的iou，但是不负责预测它，忽略掉，不计算任何 loss。
+
+总结一下：
+
+- **正样本**：负责计算 gt box 的 anchor。loss 计算 box loss（包括中心点+宽高）+ confidence loss + 类别 loss；
+- **负样本**：不负责计算 gt box 的anchor。loss 只计算 confidence loss；
+- **忽略样例**：和 gt box 的iou大于一定阈值，但又不负责 gt box的 anchor，一般是中心点 grid cell 附件的其他 grid cell 里的 anchor。不计算任何loss
+
+## 8.7 tf中python 的一些使用
+
+## **补充**
+
+### 1. “...”操作符
+
+在Python中，“...”(ellipsis)操作符，表示其他维度不变，只操作最前或最后1维；
+
+```python3
+import numpy as np
+
+x = np.array([[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]])
+"""
+[[ 1  2  3  4]
+ [ 5  6  7  8]
+ [ 9 10 11 12]]
+"""
+print(x.shape)  # (3, 4)
+y = x[1:2, ...]
+"""
+[[5 6 7 8]]
+"""
+print(y)
+```
+
+### 2. 遍历数值组合
+
+在YOLO v3中，当计算网格值时，需要由相对位置，转换为绝对位置，就是相对值，加上网格的左上角的值，如相对值(0.2, 0.3)在第(1, 1)网格中的绝对值是(1.2, 1.3)。当转换坐标值时，根据坐标点的位置，添加相应的初始值即可。这样，就需要遍历两两的数值组合，如生成0至12的网格矩阵。
+
+通过arange -> reshape -> tile -> concatenate的组合，即可快速完成。
+
+源码：
+
+```python3
+from keras import backend as K
+
+grid_y = K.tile(K.reshape(K.arange(0, stop=3), [-1, 1, 1]), [1, 3, 1])
+grid_x = K.tile(K.reshape(K.arange(0, stop=3), [1, -1, 1]), [3, 1, 1])
+
+sess = K.get_session()
+print(grid_x.shape)  # (3, 3, 1)
+print(grid_y.shape)  # (3, 3, 1)
+z = K.concatenate([grid_x, grid_y])
+print(z.shape)  # (3, 3, 2)
+print(sess.run(z))
+"""
+创建3x3的二维矩阵，遍历全部数组0~2
+"""
+```
+
+### 3. ::-1
+
+“::-1”是颠倒数组的值，例如：
+
+```python3
+import numpy as np
+
+a = np.array([1, 2, 3, 4, 5])
+print a[::-1]
+"""
+[5 4 3 2 1]
+"""
+```
+
+### 4. Session
+
+在Keras中，使用Session测试验证数据，实现：
+
+```python3
+from keras import backend as K
+
+sess = K.get_session()
+a = K.constant([2, 4])
+b = K.constant([3, 2])
+c = K.square(a - b)
+print(sess.run(c))
+```
+
+## 8.8 Focal Loss 
+
+> https://zhuanlan.zhihu.com/p/103623160
+
+回顾一下常用的 `BinayCrossEntropyLoss` 公式如下：
+
+<img src="https://pic3.zhimg.com/80/v2-350e60278495fc29f8d25ddda1157122_720w.jpg" alt="img" style="zoom:60%;" />
+
+不难看出，CE是个“笨学生”。
+
+考前复习的时候，**他不会划重点，对所有知识点 “一视同仁”**。
+如果教科书上有100道例题，包括: 90道加减乘除 + 10道 三角函数。CE同学就会吭哧吭哧的“平均用力”反复练习这100道例题，结果可想而知——他会精通那90道个位数加减乘除题目，然后其他题目基本靠蒙。那10道他不会的题，往往还是分值高的压轴题。
+
+嗯，大概就是这么个症状。
+
+**解决方案**
+
+-- 指个方向， 别再“平均用力”
+
+**方法一：分科复习**
+
+> 每个【科目】的难度是不同的； 你要花 30%的精力在四则运算，70%的精力在三角函数。 --- 老师告诉CE同学 第一个技巧
+
+对应到公式中，就是针对每个类别赋予不同的权重，即下述 ![[公式]](https://www.zhihu.com/equation?tex=%5Calpha_t)
+
+<img src="https://pic1.zhimg.com/80/v2-675ea305b015cd3ce51c953cde4bfb28_720w.jpg" alt="img" style="zoom:70%;" />
+
+### 方法二、刷题战术
+
+> 每道【题目】的难度是不同的； 你要根据以往刷类似题时候的正确率来合理分配精力。
+> --- 老师告诉CE同学 第二个技巧
+
+观察CE中的 ![[公式]](https://www.zhihu.com/equation?tex=p_t) ，它反映了模型对这个样本的识别能力（即 “这个知识点掌握得有多好”）；显然，对于 ![[公式]](https://www.zhihu.com/equation?tex=p_t) 越大的样本，我们越要打压它对loss的贡献。
+
+这里有个超参数 ![[公式]](https://www.zhihu.com/equation?tex=%5Cgamma) ; 直观来看， ![[公式]](https://www.zhihu.com/equation?tex=%5Cgamma) 越大 打压越重。如下图所示:
+
+<img src="https://pic1.zhimg.com/80/v2-b06026daefe6e6e67dc680e8468ab02c_720w.jpg" alt="img" style="zoom:67%;" />
+
+- 横轴是 ![[公式]](https://www.zhihu.com/equation?tex=p_t) , 纵轴是 ![[公式]](https://www.zhihu.com/equation?tex=%5Ctext%7BFL%7D%28p_t%29)
+- 总体来说，所有曲线都是单调下降的，即 “掌握越好的知识点越省力”
+- 当 ![[公式]](https://www.zhihu.com/equation?tex=%5Cgamma%3D0) 时，FL退化成CE，即蓝色线条
+- 当 ![[公式]](https://www.zhihu.com/equation?tex=%5Cgamma) 很大时，线条逐步压低到绿色位置，即各样本对于总loss的贡献受到打压；中间靠右区段承压尤其明显
+
+### 方法三、综合上述两者
+
+<img src="https://pic4.zhimg.com/80/v2-cbb231731ce5755825b9d9abd6673e8f_720w.jpg" alt="img" style="zoom:67%;" />
